# proyecto-rag-chatbot

./: .gitignore  Plantilla_modelo.html  Proyecto_RAG_Chatbot_MITSloan_U3.docx  README.md  guia_desarrollo_por_roles.md  main.py  pyproject.toml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  documents.py  health.py  sessions.py
backend/app/services/: embedding_service.py  ingest_service.py  llm_service.py  rag_service.py  vector_store_service.py
backend/tests/: test_api.py
data/raw/: 1735405_full_6678_Modulo_2._Exploracion_de_las_herramientas_visuales_esl-ES.docx  1736326_full_6678_Modulo_3._Exploracion_de_la_vision_informatica_esl-ES.docx  1738444_full_6678_Modulo_1._Aspectos_basicos_de_Microsoft_Azure_AI_esl-ES.docx  1741942_full_6678_Modulo_4._Exploracion_del_procesamiento_de_lenguaje_natural_esl-ES.docx
docs/: informe_tecnico.md  manual_instalacion.md  manual_usuario.md  presentacion-rol1.tex  presentacion_final.md  proceso_etl.md  pruebas_api.md
frontend/: index.html
scripts/: ingest.py
