[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "anthropic==0.34.2",
    "beautifulsoup4==4.12.3",
    "chromadb==0.5.5",
    "fastapi==0.115.0",
    "google-generativeai==0.8.3",
    "httpx==0.27.2",
    "langchain-text-splitters==0.3.0",
    "markdown==3.7",
    "ollama==0.3.3",
    "onnxruntime==1.20.1",
    "openai==1.47.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pypdf==4.3.1",
    "pytest==8.3.3",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.32.3",
    "sentence-transformers==3.1.1",
    "uvicorn[standard]==0.30.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
